[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "waclient"
version = "0.1.0"
description = "Simplified Python SDK for WhatsApp Business Cloud API"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Surenthar", email = "surentharsenthilkumar2003@gmail.com" }]
keywords = ["whatsapp", "business", "api", "cloud", "meta", "messaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["requests>=2.25.0"]

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov>=2.0", "black>=21.0", "flake8>=3.9"]

[project.urls]
Homepage = "https://github.com/yourusername/whatsapp-biz"
Documentation = "https://github.com/yourusername/whatsapp-biz#readme"
Repository = "https://github.com/yourusername/whatsapp-biz"
