[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waclient"
version = "0.1.3"
description = "WhatsApp Business API client"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  {name = "Surenthar", email = "surentharsenthilkumar2003@gmail.com"},
]

dependencies = []

[tool.setuptools]
packages = ["waclient"]
