[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waclient"
version = "0.1.8"
description = "Simplified Python SDK for WhatsApp Business Cloud API"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  {name = "Surenthar"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["whatsapp", "business", "api", "cloud", "meta", "facebook", "messaging"]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Bug Reports" = "https://github.com/surenthars/waclient/issues"
"Source" = "https://github.com/surenthars/waclient"
"Documentation" = "https://github.com/surenthars/waclient#readme"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]

[tool.setuptools]
packages = ["waclient"]
